--- a/highrise-festival/src/index.css
+++ b/highrise-festival/src/index.css
@@ -75,7 +75,6 @@ html {
   /* height: 100%; */
   /* min-height: 100vh; */
   scroll-behavior: smooth;
-  overflow-x: hidden;
   /* width: 100vw;
     height: 260vh; */
 }
@@ -88,7 +87,6 @@ body {
   /* min-height: 100vh; */
   /* overflow: auto; this was fine until I put in mazeletter bg, with its overflow to hidden. */
   overflow-y: auto;
-  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
